--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
-<!doctype html>
-<html lang="zh-CN" class="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>他们用实际行动告诉你，如何跨入编程的大门 - 知乎专栏</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="shortcut icon" href="https://static.zhihu.com/static/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="//static.zhihu.com/hemingway/app.9d031b001e2a9cde857012ac7ee192f3.css" />
-    <style></style>
-    <script>document.documentElement.className += ('ontouchstart' in window) ? ' touch' : ' no-touch'</script>
-  </head>
-  <body>
+	<li class="basic" id="1"><div class="nodecontent">如果有相关好资源/建议可以联系我：2037779355@qq.com</div></li>
+	<li class="basic" id="2"><div class="nodecontent">我是生于这片土地的先知，也终将死于这里</div>
+		<li class="basic" id="21"><div class="nodecontent">终有一天我要把一切轻描淡写地告诉你</div>
+	<li class="basic" id="3"><div class="nodecontent">不及：数学，编程，阅读</div></li>
+	<li class="basic" id="4"><div class="nodecontent">未满：动漫，音乐，古风，</div></li></ul></li>
+	<li class="basic" id="5"><div class="nodecontent">如果你会说故事，请务必和我作朋友</div></li>
+	<li class="basic" id="6"><div class="nodecontent"><a href="https://github.com/musaly">存在之理-项目</a></div></li>
+	<li class="basic" id="61"><div class="nodecontent"><a href="http://www.cnblogs.com/17storyteller/">存在之理-日志</div></li>
+	<li class="basic" id="62"><div class="nodecontent"><a href="https://www.zhihu.com/people/lu-chuan-22-48/activities">解释之美</a></div></li>
 
-    <div id="react-root"></div>
-    <script src="//static.zhihu.com/hemingway/common.086fd20e9b5138f85dd3.js"></script>
-<script src="//static.zhihu.com/hemingway/app.7e4171a45bef62d87f89.js"></script>
-<script src="//static.zhihu.com/hemingway/raven.f4dc4db3fd4803975343.js" async defer></script>
-  </body>
-</html>
+	
+	
