--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html xmlns="http://www.w3.org/1999/xhtml"><!--This file has been created with toxhtml.xsl--><head><meta content="text/html; charset=UTF-8" http-equiv="Content-Type" /><title>17号缪斯</title>猫系魔法师
-	</head><body><div class="basetop"></div><div class="basetext" id="base"><ul>
+<title>17号缪斯</title>猫系魔法师
+
+
 	<li class="basic" id="1"><div class="nodecontent">如果有相关好资源/建议可以联系我：2037779355@qq.com</div></li>
 	<li class="basic" id="2"><div class="nodecontent">我是生于这片土地的先知，也终将死于这里</div>
 		<li class="basic" id="21"><div class="nodecontent">终有一天我要把一切轻描淡写地告诉你</div>
