--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 
 	<li class="basic" id="1"><div class="nodecontent">如果有相关好资源/建议可以联系我：2037779355@qq.com</div></li>
 	<li class="basic" id="2"><div class="nodecontent">我是生于这片土地的先知，也终将死于这里</div>
-		<li class="basic" id="21"><div class="nodecontent">终有一天我要把一切轻描淡写地告诉你</div>
+	<li class="basic" id="21"><div class="nodecontent">终有一天我要把一切轻描淡写地告诉你</div>
 	<li class="basic" id="3"><div class="nodecontent">不及：数学，编程，阅读</div></li>
 	<li class="basic" id="4"><div class="nodecontent">未满：动漫，音乐，古风，</div></li></ul></li>
 	<li class="basic" id="5"><div class="nodecontent">如果你会说故事，请务必和我作朋友</div></li>
-	<li class="basic" id="6"><div class="nodecontent"><a href="https://github.com/musaly">存在之理-项目</a></div></li>
-	<li class="basic" id="61"><div class="nodecontent"><a href="http://www.cnblogs.com/17storyteller/">存在之理-日志</div></li>
-	<li class="basic" id="62"><div class="nodecontent"><a href="https://www.zhihu.com/people/lu-chuan-22-48/activities">解释之美</a></div></li>
-
-	
+	<li class="basic" id="6"><div class="nodecontent"><a target="_blank" href="https://github.com/musaly">存在之理-项目</a></div></li>
+	<li class="basic" id="61"><div class="nodecontent"><a target="_blank" href="http://www.cnblogs.com/17storyteller/">存在之理-日志</div></li>
+	<li class="basic" id="62"><div class="nodecontent"><a target="_blank" href="https://www.zhihu.com/people/lu-chuan-22-48/activities">解释之美</a></div></li>
 	
