--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>17号缪斯</title>猫系魔法师
 
 
-	<li class="basic" id="1"><div class="nodecontent">如果有相关好资源/建议可以联系我：2037779355@qq.com</div></li>
+	<li class="basic" id="1"><div class="nodecontent">如果有相关好资源/建议可以联系我：y2037779355@gmail.com</div></li>
 	<li class="basic" id="2"><div class="nodecontent">我是生于这片土地的先知，也终将死于这里</div>
 	<li class="basic" id="21"><div class="nodecontent">终有一天我要把一切轻描淡写地告诉你</div>
 	<li class="basic" id="3"><div class="nodecontent">不及：数学，编程，阅读</div></li>
