--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 
 
 <p></p>
-<a href="txt\hello world.txt"	target="_blank"	>hello world	</a>
+<a href="txt\hello world"	target="_blank"	>hello world	</a>
 <p></p>
